stop horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ html, body {
 	display: flex;
 	flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 .blurred {
