--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
